--- a/webroot/css/app.css
+++ b/webroot/css/app.css
@@ -5302,6 +5302,7 @@ footer#footer {
   top: 0;
   left: 0;
   border: 0.375rem solid white;
+  -webkit-transition: transform 0.3s, height 0.3s;
   background: white;
   /* Old browsers */
   background: -moz-linear-gradient(45deg, #ffffff 0%, #f3f3f3 50%, #ededed 51%, #ffffff 100%);
@@ -5323,6 +5324,7 @@ footer#footer {
   min-height: 200px;
   height: auto;
   z-index: 10001;
+  overflow-x: hidden;
   overflow-y: auto;
   padding: 0.9375rem; }
   #primary-modal * {
@@ -5362,6 +5364,8 @@ footer#footer {
     -webkit-transform: translateX(-1500px); }
   #primary-modal .default-content.slide-right {
     -webkit-transform: translateX(1500px); }
+  #primary-modal.slide-down {
+    -webkit-transform: translateY(1500px); }
 
 #orbcard-modal {
   height: 8.53125rem;
