--- a/webroot/scss/templates/modals.scss
+++ b/webroot/scss/templates/modals.scss
@@ -199,3 +199,13 @@ div.view-cart-row {
     }
   }
 }
+
+#modal-masthead {
+  margin-bottom:1rem;
+}
+
+/*******   modal pages ********/
+//registration
+#registration-method-bar {
+font-size:3rem;
+}
