--- a/webroot/css/app.css
+++ b/webroot/css/app.css
@@ -5440,6 +5440,13 @@ div.view-cart-row.total * {
 
 #modal-masthead {
   margin-bottom: 1rem; }
+  #modal-masthead h1 {
+    padding-bottom: 0;
+    margin-bottom: 0; }
+  #modal-masthead h2 {
+    text-align: center;
+    font-size: 1.5rem;
+    color: #0779be; }
 
 /*******   modal pages ********/
 #registration-method-bar {
