--- a/webroot/scss/templates/modals.scss
+++ b/webroot/scss/templates/modals.scss
@@ -221,14 +221,14 @@ div.view-cart-row {
 }
 
 .modal-button {
-  height: 2rem;
+//  height: 2rem;
   background-color:$xtreme-blue;
   color:$white !important;
   &:hover {background-color: lighten($xtreme-blue, 10%);}
   @include HelveticaBlkCn;
   text-transform: uppercase;
   padding:$base-padding;
-  @include helvetica_v_center_lh(2rem, 2rem +4 * $base-padding);
+//  @include helvetica_v_center_lh(2rem, 2rem +4 * $base-padding);
 }
 
 /*******   modal pages ********/
