--- a/webroot/css/app.css
+++ b/webroot/css/app.css
@@ -4933,6 +4933,30 @@ body {
   background-repeat: no-repeat;
   background-position: fixed; }
 
+body#vendor {
+  width: 100%;
+  height: 100%;
+  background-image: url("sadfsdfsf") !important;
+  background-color: #373737;
+  color: white;
+  z-index: 99999999999; }
+  body#vendor .button {
+    width: 100%;
+    height: 10rem;
+    line-height: 10rem;
+    font-size: 6rem;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 2rem; }
+    body#vendor .button.alert {
+      background-color: #e3363f; }
+      body#vendor .button.alert:hover {
+        background-color: #9e161d; }
+    body#vendor .button.success {
+      background-color: #64c819; }
+      body#vendor .button.success:hover {
+        background-color: #438410; }
+
 #page-content {
   height: 100%; }
   @media only screen and (min-width:90.063em) {
