--- a/webroot/scss/globals.scss
+++ b/webroot/scss/globals.scss
@@ -4,6 +4,34 @@ body {
   background-repeat:no-repeat;
   background-position:fixed;
 }
+body#vendor {
+  width:100%;
+  height:100%;
+  background-image:url("sadfsdfsf") !important;
+  background-color:$text-grey;
+  color:$white;
+  z-index:99999999999;
+  .button {
+    width:100%;
+    height: 10rem;
+    line-height:10rem;
+    font-size: 6rem;
+    text-transform: uppercase;
+    text-align: center;
+    &.alert {
+      background-color: lighten($xtreme-red, 5%);
+      &:hover { background-color: darken($xtreme-red, 15%);}
+    }
+    &.success {
+      background-color: rgb(100, 200, 25);
+      &:hover {background-color: darken(rgb(100, 200, 25), 15%);}
+    }
+    margin-bottom: 2rem;
+
+  }
+
+}
+
 #page-content {
   height:100%;
   @media #{$xlarge-up} {
