--- a/webroot/scss/palette.scss
+++ b/webroot/scss/palette.scss
@@ -25,12 +25,20 @@ $xtreme-blue-a50:rgba(7,121,190, 0.5);
 $xtreme-red:rgb(224,32,39);
 $xtreme-dark-red:rgb(172,8,25);
 $xtreme-yellow:rgb(250,234,6);
-$xtreme-orange: rgb(255, 89, 0);
 $black: rgb(0,0,0);
 $white: rgb(255,255,255);
 $dark-grey: rgb(25,25,25);
 $transparent: rgba(0,0,0,0);
 $error-color: lighten($xtreme-red, 20%);
+
+
+$meat-opt-bg-color: rgb(255,115, 32);
+//$sauce-opt-bg-color: rgba(255,98, 64, 1);
+$sauce-opt-bg-color: rgba(32,160,174, 1);
+$cheese-opt-bg-color: rgba(178,45,173, 1);
+$veggie-opt-bg-color: rgba(50,165,20, 1);
+
+
 
 // GRADIENTS
 @mixin orb-card-gradient() {
