--- a/webroot/scss/typography.scss
+++ b/webroot/scss/typography.scss
@@ -108,10 +108,10 @@ span.icon-hn-inline {
 .icon-specialty-pizzas:before {
   content: "v";
 }
-.icon-poutines:before {
+.icon-fries-and-poutines:before {
   content: "w";
 }
-.icon-pita-wraps:before {
+.icon-pitas-and-sandwiches:before {
   content: "x";
 }
 .icon-original-pizzas:before {
@@ -120,7 +120,7 @@ span.icon-hn-inline {
 .icon-panzarottis:before {
   content: "z";
 }
-.icon-sandwiches:before {
+.icon-sandwhiches:before {
   content: "A";
 }
 .icon-subs:before {
@@ -144,7 +144,7 @@ span.icon-hn-inline {
 .icon-desserts:before {
   content: "H";
 }
-.icon-beverages:before {
+.icon-drinks-and-sauces:before {
   content: "I";
 }
 .icon-pasta:before {
