--- a/webroot/scss/templates/orb_card_stage_menu.scss
+++ b/webroot/scss/templates/orb_card_stage_menu.scss
@@ -77,7 +77,7 @@
     padding-left     : $orb-opt-filter-padding-left;
     overflow:hidden;
     z-index:8010;
-//  background-color:$text-grey !important;
+    background-color: transparent !important;
   li {
     cursor:pointer;
     float:left;
