--- a/webroot/css/app.css
+++ b/webroot/css/app.css
@@ -5701,7 +5701,8 @@ div.view-cart-row.total * {
   font-size: 0.8rem; }
 
 #modal-masthead {
-  margin: 0.5rem 0 1rem 0;
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
   padding: 0.75rem;
   background-color: #0779be;
   margin-bottom: 1rem;
