--- a/webroot/scss/templates/modals.scss
+++ b/webroot/scss/templates/modals.scss
@@ -201,7 +201,8 @@ div.view-cart-row {
 }
 
 #modal-masthead {
-  margin:0.5rem 0 1rem 0;
+  margin-top:0.5rem;
+  margin-bottom:1rem;
   padding:0.75rem;
   background-color: $xtreme-blue;
   margin-bottom:1rem;
